--- a/src/main/resources/개인공고상세보기.html
+++ b/src/main/resources/개인공고상세보기.html
@@ -66,13 +66,13 @@
 	<div class="d-flex mt-2 mb-4">
 		<div class="col-xl-3 col-lg-2 col-md-1"></div>
 
-		<div class="col-xl-6 col-lg-8 col-md-10 col-sm-12 card">
-			<div class="d-flex m-2">
-				<div class="col-7">
-					<a href="#"><img src="cos.jpg" class="img-fluid" style="max-height: 500px;"/></a>
+		<div class="col-xl-6 col-lg-8 col-md-10 col-sm-12 border border-info">
+			<div class="d-flex p-2">
+				<div class="col-6 ms-3">
+					<a href="#"><img src="../../../images/basic.jpg" class="img-fluid" style="width:400px; height:300px;"/></a>
 				</div>
-
-				<div class="col-5 p-4 bg-info">
+				
+				<div class="col-5 p-4 ms-4 bg-info">
 					<div>
 						<button type="button" class="btn btn-warning mb-3">
 							북마크하기
@@ -90,8 +90,8 @@
 			</div>
 
 			<div class="p-3">
-				<div><h3>공고명</h3></div>
-				<div>회사명</div>
+				<div><h2>백엔드 개발자 모집</h2></div>
+				<div><h5>카카오</h5></div>
 				<div>회사설명+이미지</div>
 			</div>
 
