--- a/src/main/resources/20기업공고등록.html
+++ b/src/main/resources/20기업공고등록.html
@@ -92,24 +92,22 @@
 			<a href="#" class="w-100 btn btn-info">인재 추천</a>
 			<div class="m-2"></div>
 		</div>
-		<div class="col-9">
-			<h1 class="text-center">기업 페이지</h1>
+		<div class="col-9 ms-3">
+			<h1 class="text-center mt-2">공고등록</h1>
 
 			<div class="d-flex">
 				<div class="m-2 col-4 d-flex flex-column align-items-center">
 					<img src="../../../images/basic.jpg" class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
-					<button type="button" class="mt-3 btn btn-info align-middle justify-content-center">사진수정</button>
 				</div>
 
 				<div class="col-8 p-2">
-					<form action="">
 						<div class="input-group mb-3">
 							<span class="input-group-text">회사명</span>
-							<input type="text" class="form-control" value="카카오" disabled>
+							<input type="text" class="form-control">
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">사업자번호</span>
-							<input type="text" class="form-control" value="12345" disabled>
+							<input type="text" class="form-control">
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">주소</span>
@@ -120,29 +118,26 @@
 							<input type="text" class="form-control">
 						</div>
 						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
+							<span class="input-group-text">홈페이지</span>
 							<input type="text" class="form-control">
 						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-					</form>
 				</div>
 
 			</div>
 
+			<div class="input-group ms-2 mb-3">
+				<span class="input-group-text">공고명</span>
+				<input type="text" class="form-control">
+			</div>
+
+			<div class="input-group ms-2 mb-3">
+				<span class="input-group-text">공고내용</span>
+				<textarea class="form-control" rows="5"></textarea>
+			</div>
+
 
 			<div>
-				<button type="button" class="m-3 w-100 btn btn-success">수정하기</button>
+				<button type="button" class="m-2 mb-3 w-100 btn btn-success">공고등록</button>
 			</div>
 
 		</div>
