--- a/src/main/resources/19기업공고관리.html
+++ b/src/main/resources/19기업공고관리.html
@@ -92,58 +92,71 @@
 			<a href="#" class="w-100 btn btn-info">인재 추천</a>
 			<div class="m-2"></div>
 		</div>
-		<div class="col-9">
-			<h1 class="text-center">기업 페이지</h1>
+		<div class="col-9 ms-3">
+			<h1 class="text-center mt-2">공고관리</h1>
+			<h4>공고 리스트</h4>
 
-			<div class="d-flex">
-				<div class="m-2 col-4 d-flex flex-column align-items-center">
-					<img src="../../../images/basic.jpg" class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
-					<button type="button" class="mt-3 btn btn-info align-middle justify-content-center">사진수정</button>
+			<div class="d-flex border border-info m-3 p-2">
+				<div class="col-9">
+					<div>asd</div>
+					<div>asd</div>
+					<div>asdasdasd</div>
 				</div>
 
-				<div class="col-8 p-2">
-					<form action="">
-						<div class="input-group mb-3">
-							<span class="input-group-text">회사명</span>
-							<input type="text" class="form-control" value="카카오" disabled>
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">사업자번호</span>
-							<input type="text" class="form-control" value="12345" disabled>
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">주소</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-					</form>
+				<div class="col-3 m-3">
+					<button type="button" class="btn btn-success">공고 수정</button>
+				</div>
+			</div>
+
+			<div class="d-flex border border-info m-3 p-2">
+				<div class="col-9">
+					<div>asd</div>
+					<div>asd</div>
+					<div>asdasdasd</div>
 				</div>
 
+				<div class="col-3 m-3">
+					<button type="button" class="btn btn-success">공고 수정</button>
+				</div>
+			</div>
+
+			<div class="d-flex border border-info m-3 p-2">
+				<div class="col-9">
+					<div>asd</div>
+					<div>asd</div>
+					<div>asdasdasd</div>
+				</div>
+
+				<div class="col-3 m-3">
+					<button type="button" class="btn btn-success">공고 수정</button>
+				</div>
+			</div>
+
+			<div class="d-flex border border-info m-3 p-2">
+				<div class="col-9">
+					<div>asd</div>
+					<div>asd</div>
+					<div>asdasdasd</div>
+				</div>
+
+				<div class="col-3 m-3">
+					<button type="button" class="btn btn-success">공고 수정</button>
+				</div>
+			</div>
+
+			<div class="d-flex border border-info m-3 p-2">
+				<div class="col-9">
+					<div>asd</div>
+					<div>asd</div>
+					<div>asdasdasd</div>
+				</div>
+
+				<div class="col-3 m-3">
+					<button type="button" class="btn btn-success">공고 수정</button>
+				</div>
 			</div>
 
 
-			<div>
-				<button type="button" class="m-3 w-100 btn btn-success">수정하기</button>
-			</div>
 
 		</div>
 
