--- a/src/main/resources/22지원자내역.html
+++ b/src/main/resources/22지원자내역.html
@@ -92,58 +92,69 @@
 			<a href="#" class="w-100 btn btn-info">인재 추천</a>
 			<div class="m-2"></div>
 		</div>
-		<div class="col-9">
-			<h1 class="text-center">기업 페이지</h1>
+		<div class="col-9 ms-3">
+			<h1 class="text-center mt-2 mb-2">지원자 내역</h1>
 
-			<div class="d-flex">
-				<div class="m-2 col-4 d-flex flex-column align-items-center">
-					<img src="../../../images/basic.jpg" class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
-					<button type="button" class="mt-3 btn btn-info align-middle justify-content-center">사진수정</button>
-				</div>
-
-				<div class="col-8 p-2">
-					<form action="">
-						<div class="input-group mb-3">
-							<span class="input-group-text">회사명</span>
-							<input type="text" class="form-control" value="카카오" disabled>
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">사업자번호</span>
-							<input type="text" class="form-control" value="12345" disabled>
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">주소</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-						<div class="input-group mb-3">
-							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control">
-						</div>
-					</form>
-				</div>
-
-			</div>
+			
 
 
-			<div>
-				<button type="button" class="m-3 w-100 btn btn-success">수정하기</button>
-			</div>
+			<table class="table border ms-3">
+				<thead>
+				  <tr class="table-secondary">
+					<th scope="col">No.</th>
+					<th scope="col">이름</th>
+					<th scope="col">이력서</th>
+					<th scope="col">지원 공고</th>
+					<th scope="col">경력</th>
+					<th scope="col">상태</th>
+					<th scope="col">응답</th>
+				  </tr>
+				</thead>
+				<tbody>
+				  <tr>
+					<th scope="row">1</th>
+					<td>홍길동</td>
+					<td>이력서1</td>
+					<td>백엔드채용</td>
+					<td>신입</td>
+					<td>대기중</td>
+					<td>
+						<button class="badge bg-success" type="button">합격</button>
+						<button class="badge bg-danger" type="button">탈락</button>
+					</td>
+				  </tr>
+				  <tr>
+					<th scope="row">2</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				  </tr>
+				  <tr>
+					<th scope="row">3</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				  </tr>
+				  <tr>
+					<th scope="row">4</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				  </tr>
+				</tbody>
+			  </table>
+
+
+
 
 		</div>
 
