메인페이지수정

--- a/src/main/resources/24기업인재추천.html
+++ b/src/main/resources/24기업인재추천.html
@@ -236,7 +236,7 @@
 			
 			<div class="d-flex border border-info m-3 p-2">
 				<div class="col-8">
-					<div>지원자 D</div>
+					<div>지원자 C</div>
 				</div>
 				<div class="col-4 mt-1 mb-1 ms-3">
 					<button type="button" class="btn btn-success">요청</button>
