--- a/src/main/resources/13이력서등록.html
+++ b/src/main/resources/13이력서등록.html
@@ -32,7 +32,7 @@
 
       </div>
       <nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
-         <a href="/"><img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
+         <a href="/"><img src="../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
          <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                <span class="navbar-toggler-icon"></span>
@@ -97,7 +97,7 @@
 
          <div class="d-flex">
             <div class="m-2 col-4 d-flex flex-column align-items-center">
-               <img src="../../../../../images/basic.jpg" class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
+               <img src="../../../images/basic.jpg" class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
             </div>
 
             <div class="col-8 p-2">
