--- a/src/main/resources/14이력서관리.html
+++ b/src/main/resources/14이력서관리.html
@@ -26,7 +26,7 @@
             <a class="btn btn-white" href="/loginForm">로그인</a>
         </div>
         <nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
-            <a href="/"><img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
+            <a href="/"><img src="../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                     <span class="navbar-toggler-icon"></span>
