--- a/src/main/resources/12mypage.html
+++ b/src/main/resources/12mypage.html
@@ -10,31 +10,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-
-    <style>
-        .main {
-            flex: 3;
-            padding: 20px;
-        }
-
-        .tg {
-            border-collapse: collapse;
-            border-spacing: 0;
-            width: 100%;
-        }
-
-        .tg th,
-        .tg td {
-            border: 1px solid black;
-            padding: 10px;
-            text-align: left;
-            cursor: pointer;
-        }
-
-        .tg th {
-            font-weight: bold;
-        }
-    </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -47,7 +22,7 @@
             <a class="btn btn-white" href="/loginForm">로그인</a>
         </div>
         <nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
-            <a href="/"><img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
+            <a href="/"><img src="../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -110,7 +85,7 @@
 	   
 				<div class="d-flex">
 				   <div class="m-2 col-4 d-flex flex-column align-items-center">
-					  <img src="../../../../../images/basic.jpg" class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
+					  <img src="../../../images/basic.jpg" class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
 				   </div>
 	   
 				   <div class="col-8 p-2">
