--- a/src/main/resources/10개인공고상세보기.html
+++ b/src/main/resources/10개인공고상세보기.html
@@ -69,9 +69,10 @@
 		<div class="col-xl-6 col-lg-8 col-md-10 col-sm-12 border border-info">
 			<div class="d-flex p-2">
 				<div class="col-6 ms-3">
-					<a href="#"><img src="../../../images/basic.jpg" class="img-fluid" style="width:400px; height:300px;"/></a>
+					<a href="#"><img src="../../../images/basic.jpg" class="img-fluid"
+					                 style="width:400px; height:300px;"/></a>
 				</div>
-				
+
 				<div class="col-5 p-4 ms-4 bg-info">
 					<div>
 						<button type="button" class="btn btn-warning mb-3">
