--- a/src/main/resources/19기업공고관리.html
+++ b/src/main/resources/19기업공고관리.html
@@ -75,7 +75,7 @@
 
 	
 	<div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
-		<div class="bg-info col-2">
+		<div class="bg-info col-auto">
 			<div class="m-2"></div>
 			<a href="#" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
@@ -94,69 +94,56 @@
 		</div>
 		<div class="col-9 ms-3">
 			<h1 class="text-center mt-2">공고관리</h1>
-			<h4>공고 리스트</h4>
 
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<div class="">
 					<div>asd</div>
 					<div>asd</div>
 					<div>asdasdasd</div>
 				</div>
 
-				<div class="col-3 m-3">
+				<div class="m-3">
 					<button type="button" class="btn btn-success">공고 수정</button>
 				</div>
 			</div>
 
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
+
+
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<div class="">
 					<div>asd</div>
 					<div>asd</div>
 					<div>asdasdasd</div>
 				</div>
 
-				<div class="col-3 m-3">
+				<div class="m-3">
 					<button type="button" class="btn btn-success">공고 수정</button>
 				</div>
 			</div>
 
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<div class="">
 					<div>asd</div>
 					<div>asd</div>
 					<div>asdasdasd</div>
 				</div>
 
-				<div class="col-3 m-3">
+				<div class="m-3">
 					<button type="button" class="btn btn-success">공고 수정</button>
 				</div>
 			</div>
 
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<div class="">
 					<div>asd</div>
 					<div>asd</div>
 					<div>asdasdasd</div>
 				</div>
 
-				<div class="col-3 m-3">
+				<div class="m-3">
 					<button type="button" class="btn btn-success">공고 수정</button>
 				</div>
 			</div>
-
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
-					<div>asd</div>
-					<div>asd</div>
-					<div>asdasdasd</div>
-				</div>
-
-				<div class="col-3 m-3">
-					<button type="button" class="btn btn-success">공고 수정</button>
-				</div>
-			</div>
-
-
 
 		</div>
 
