--- a/src/main/resources/22지원자내역.html
+++ b/src/main/resources/22지원자내역.html
@@ -75,7 +75,7 @@
 
 	
 	<div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
-		<div class="bg-info col-2">
+		<div class="bg-info col-auto">
 			<div class="m-2"></div>
 			<a href="#" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
@@ -93,62 +93,71 @@
 			<div class="m-2"></div>
 		</div>
 		<div class="col-9 ms-3">
-			<h1 class="text-center mt-2 mb-2">지원자 내역</h1>
+			<h1 class="text-center mt-2 mb-3">지원자 내역</h1>
 
 			
 
 
-			<table class="table border ms-3">
+			<table class="table table-bordered border ms-3">
 				<thead>
 				  <tr class="table-secondary">
-					<th scope="col">No.</th>
-					<th scope="col">이름</th>
-					<th scope="col">이력서</th>
-					<th scope="col">지원 공고</th>
-					<th scope="col">경력</th>
-					<th scope="col">상태</th>
-					<th scope="col">응답</th>
+					<th class="text-center" scope="col">No.</th>
+					<th class="text-center" scope="col">이름</th>
+					<th class="text-center" scope="col">이력서</th>
+					<th class="text-center" scope="col">지원 공고</th>
+					<th class="text-center" scope="col">경력</th>
+					<th class="text-center" scope="col">상태</th>
+					<th class="text-center" scope="col">응답</th>
 				  </tr>
 				</thead>
 				<tbody>
 				  <tr>
-					<th scope="row">1</th>
-					<td>홍길동</td>
-					<td>이력서1</td>
-					<td>백엔드채용</td>
-					<td>신입</td>
-					<td>대기중</td>
-					<td>
+					<th class="text-center" scope="row">1</th>
+					<td class="text-center">홍길동</td>
+					<td class="text-center">이력서1</td>
+					<td class="text-center">백엔드채용</td>
+					<td class="text-center">신입</td>
+					<td class="text-center">대기중</td>
+					<td class="text-center">
 						<button class="badge bg-success" type="button">합격</button>
 						<button class="badge bg-danger" type="button">탈락</button>
 					</td>
 				  </tr>
 				  <tr>
-					<th scope="row">2</th>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<th class="text-center" scope="row">2</th>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
 				  </tr>
 				  <tr>
-					<th scope="row">3</th>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<th class="text-center" scope="row">3</th>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
 				  </tr>
 				  <tr>
-					<th scope="row">4</th>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<th class="text-center" scope="row">4</th>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+				  </tr>
+				  <tr>
+					<th class="text-center" scope="row">5</th>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
 				  </tr>
 				</tbody>
 			  </table>
