--- a/src/main/resources/23기업지원자북마크.html
+++ b/src/main/resources/23기업지원자북마크.html
@@ -75,7 +75,7 @@
 
 	
 	<div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
-		<div class="bg-info col-2">
+		<div class="bg-info col-auto">
 			<div class="m-2"></div>
 			<a href="#" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
@@ -98,11 +98,11 @@
 
 
 			
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<div class="">
 					<div>지원자 A</div>
 				</div>
-				<div class="col-3 mt-1 mb-1">
+				<div class="">
 					<button type="button" class="btn btn-success">연락</button>
 					<button type="button" class="btn btn-danger">삭제</button>
 				</div>
@@ -110,11 +110,11 @@
 
 
 			
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<div class="">
 					<div>지원자 B</div>
 				</div>
-				<div class="col-3 mt-1 mb-1">
+				<div class="">
 					<button type="button" class="btn btn-success">연락</button>
 					<button type="button" class="btn btn-danger">삭제</button>
 				</div>
@@ -122,11 +122,11 @@
 
 
 			
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<div class="">
 					<div>지원자 C</div>
 				</div>
-				<div class="col-3 mt-1 mb-1">
+				<div class="">
 					<button type="button" class="btn btn-success">연락</button>
 					<button type="button" class="btn btn-danger">삭제</button>
 				</div>
@@ -134,16 +134,19 @@
 
 
 			
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="col-9">
+			
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<div class="">
 					<div>지원자 D</div>
 				</div>
-				<div class="col-3 mt-1 mb-1">
+				<div class="">
 					<button type="button" class="btn btn-success">연락</button>
 					<button type="button" class="btn btn-danger">삭제</button>
 				</div>
 			</div>
 
+
+			
 
 		</div>
 
