--- a/src/main/resources/25기업이력서상세보기.html
+++ b/src/main/resources/25기업이력서상세보기.html
@@ -75,7 +75,7 @@
 
 	
 	<div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
-		<div class="bg-info col-2">
+		<div class="bg-info col-auto">
 			<div class="m-2"></div>
 			<a href="#" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
@@ -92,58 +92,60 @@
 			<a href="#" class="w-100 btn btn-info">인재 추천</a>
 			<div class="m-2"></div>
 		</div>
-		<div class="col-9 ms-3">
+
+		
+		<div class="col-auto container">
 			<h1 class="text-center mt-2">이력서 상세보기</h1>
 
 			<div class="d-flex">
-				<div class="m-2 col-4 d-flex flex-column align-items-center">
-					<img src="../../../images/basic.jpg" class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
+				<div class="m-1 col-4 d-flex flex-column align-items-center overflow-hidden" style="width:170px; height:170px;">
+					<img src="../../../images/basic.jpg" class="img-fluid rounded-circle"/>
 				</div>
 
 				<div class="col-8 p-2">
 						<div class="input-group mb-3">
 							<span class="input-group-text">이름</span>
-							<div type="text" class="form-control">홍길동</div>
+							<input type="text" class="form-control" value="홍길동" disabled>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">전화번호</span>
-							<div type="text" class="form-control">010-1234-5678</div>
+							<input type="text" class="form-control" value="010-1234-5678" disabled>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">주소</span>
-							<div type="text" class="form-control">ㅁㄴㅇㅁㄴㅇ</div>
+							<textarea class="form-control" rows="2" disabled>서울특별시 송파구 올림픽로 300 롯데월드타워 35층</textarea>
 						</div>
-						<div class="input-group mb-3">
+						<div class="input-group mb-2">
 							<span class="input-group-text">생년월일</span>
-							<div type="text" class="form-control">1111.11.11</div>
+							<input type="text" class="form-control" value="1111.11.11" disabled>
 						</div>
 				</div>
 
 			</div>
 
-			<div class="input-group ms-2 mb-3">
+			<div class="input-group mb-3 ms-1">
 				<span class="input-group-text">학력사항</span>
-				<div type="text" class="form-control"></div>
+				<input type="text" class="form-control" value="asdasdas" disabled>
 			</div>
 
-			<div class="input-group ms-2 mb-3">
+			<div class="input-group mb-3 ms-1">
 				<span class="input-group-text">경력사항</span>
-				<div type="text" class="form-control"></div>
+				<input type="text" class="form-control" value="asdasdas" disabled>
 			</div>
 
-			<div class="input-group ms-2 mb-3">
+			<div class="input-group mb-3 ms-1">
 				<span class="input-group-text">보유기술</span>
-				<div type="text" class="form-control"></div>
+				<input type="text" class="form-control" value="asdasdas" disabled>
 			</div>
 
-			<div class="input-group ms-2 mb-3">
+			<div class="input-group mb-3 ms-1">
 				<span class="input-group-text">자기소개서</span>
-				<textarea class="form-control" rows="5" readonly></textarea>
+				<textarea class="form-control" rows="5" disabled>asfasfasfasf</textarea>
 			</div>
 
 
 			<div>
-				<button type="button" class="m-2 mb-3 w-100 btn btn-success">이력서 닫기</button>
+				<button type="button" class="mb-3 ms-1 w-100 btn btn-success">공고닫기</button>
 			</div>
 
 		</div>
