기업쪽 컨트롤러

--- a/src/main/resources/25기업이력서상세보기.html
+++ b/src/main/resources/25기업이력서상세보기.html
@@ -144,8 +144,9 @@
 			</div>
 
 
-			<div>
-				<button type="button" class="mb-3 ms-1 w-100 btn btn-success">공고닫기</button>
+			<div class="d-flex justify-content-center">
+				<button type="button" class="mb-3 ms-1 w-100 btn btn-success">연락하기</button>
+				<button type="button" class="mb-3 ms-3 w-100 btn btn-warning">북마크하기</button>
 			</div>
 
 		</div>
