--- a/src/main/resources/14이력서관리.html
+++ b/src/main/resources/14이력서관리.html
@@ -109,7 +109,7 @@
 				<div>
 					<button type="button" class="btn btn-warning  w-50">이력서4</button>
 
-					<button type="button" class="btn btn-primary btn-sm">수정l</button>
+					<button type="button" class="btn btn-primary btn-sm">수정</button>
 					<button type="button" class="btn btn-primary btn-sm">삭제</button>
 				</div>
 			</div>
